Fix overflowing course info

--- a/react-ui/src/stylesheets/CourseSideBar.css
+++ b/react-ui/src/stylesheets/CourseSideBar.css
@@ -1,6 +1,5 @@
 /* Course Info Sidebar */
 .course-side-bar {
-  width: 22%;
   height: 100%;
   display: flex;
   flex-direction: column;
